--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,7 +18,7 @@
                 <!-- Logo text --><span>
                          <!-- dark Logo text -->
                          <img src="./assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-                         <!-- Light Logo text -->    
+                         <!-- Light Logo text -->
                          <img src="./assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>
         </div>
         <!-- ============================================================== -->
@@ -173,7 +173,7 @@
                             <li role="separator" class="divider"></li>
                             <li><a routerLink="account-settings"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a routerLink="/login"><i class="fa fa-power-off"></i> Logout</a></li>
+                            <li><a class="cursor" (click)="logout()"><i class="fa fa-power-off"></i> Logout</a></li>
                         </ul>
                     </div>
                 </li>
